WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
273178
[WPE] Platform: Crash on Wayland in DMA-BUF feedback handling
https://bugs.webkit.org/show_bug.cgi?id=273178
Summary
[WPE] Platform: Crash on Wayland in DMA-BUF feedback handling
Adrian Perez
Reported
2024-04-24 03:57:44 PDT
This was with an AMD GPU, open source Mesa driver, and the Labwc compositor: Program terminated with signal SIGSEGV, Segmentation fault. #0 DMABufFeedback::FormatTable::FormatTable (this=0x7a56f60100e0, other=...) at ../Source/WebKit/WPEPlatform/wpe/wayland/WPEViewWayland.cpp:73 73 : size(other.size) [Current thread is 1 (Thread 0x7a575cf0a140 (LWP 1507287))] (gdb) bt #0 DMABufFeedback::FormatTable::FormatTable (this=0x7a56f60100e0, other=...) at ../Source/WebKit/WPEPlatform/wpe/wayland/WPEViewWayland.cpp:73 #1 DMABufFeedback::DMABufFeedback (this=0x7a56f60100e0, table=...) at ../Source/WebKit/WPEPlatform/wpe/wayland/WPEViewWayland.cpp:106 #2 std::make_unique<DMABufFeedback, DMABufFeedback::FormatTable> (__args=...) at /usr/bin/../lib64/gcc/x86_64-pc-linux-gnu/13.2.1/../../../../include/c++/13.2.1/bits/unique_ptr.h:1070 #3 WTF::makeUnique<DMABufFeedback, DMABufFeedback::FormatTable> (args=...) at WTF/Headers/wtf/StdLibExtras.h:602 ... There's some issue inside the main_device event callback of the DMA-BUF feedback protocol: #4 $_11::operator() (data=<optimized out>, device=0x5cf134b1cc80, this=<optimized out>) at ../Source/WebKit/WPEPlatform/wpe/wayland/WPEViewWayland.cpp:426 (gdb) p priv->committedDMABufFeedback $5 = std::unique_ptr<DMABufFeedback> = { get() = 0x0 }
Attachments
Add attachment
proposed patch, testcase, etc.
Adrian Perez
Comment 1
2024-04-24 07:33:36 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/27690
EWS
Comment 2
2024-04-28 13:40:12 PDT
Committed
278091@main
(a3f9ca459d73): <
https://commits.webkit.org/278091@main
> Reviewed commits have been landed. Closing PR #27690 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug